RESOLVED FIXED 249788
[CSS-Typed-OM] Cannot set `z-index` property to -3.14
https://bugs.webkit.org/show_bug.cgi?id=249788
Summary [CSS-Typed-OM] Cannot set `z-index` property to -3.14
Chris Dumez
Reported 2022-12-22 10:58:45 PST
We cannot set the `z-index` property to -3.14 using the CSS Typed OM API. We would expect -3 as computed value, however, WebKit was returning 0.
Attachments
Chris Dumez
Comment 1 2022-12-22 11:02:55 PST
EWS
Comment 2 2022-12-22 15:58:22 PST
Committed 258265@main (c4ae09ba56fd): <https://commits.webkit.org/258265@main> Reviewed commits have been landed. Closing PR #8009 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-12-22 15:59:15 PST
Note You need to log in before you can comment on or make changes to this bug.