Source/WebCore/css/typedom/CSSUnitValue.cpp
@@ -271,7 +271,7 @@ RefPtr<CSSValue> CSSUnitValue::toCSSValueWithProperty(CSSPropertyID propertyID) 
         auto sumNode = CSSCalcOperationNode::createSum(Vector { node.releaseNonNull() });
         if (!sumNode)
             return nullptr;
-        return CSSPrimitiveValue::create(CSSCalcValue::create(sumNode.releaseNonNull(), true /* allowsNegativePercentage */));
+        return CSSPrimitiveValue::create(CSSCalcValue::create(sumNode.releaseNonNull()));
     }
     return toCSSValue();
 }
